--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head><title>Danielles Website<title/><head/>
+  <head>
+      <title>Danielles Website<title/>
+    <head/>
+    <body>
+
+    </body>
 
 
 
