--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
       <title>Danielles Website<title/>
     <head/>
+
+
     <body>
 
-    </body>
 
-
-
+<h1>This is a Heading</h1>
+<p>This is a paragraph. </p>
 
 
 
